--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@omnicajs/vue-remote": "^0.2.5",
     "@popperjs/core": "^2.11.8",
     "@retailcrm/embed-ui": "^0.5.23-alpha.5",
+    "@retailcrm/embed-ui-v1-components": "^0.6.0",
     "core-js": "^3.8.3",
     "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
